<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/appLayout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:id="@+id/screenLayout"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/screen"
                android:layout_width="350dp"
                android:layout_height="140dp"
                android:gravity="end"
                android:text="@string/_0"
                android:textSize="48sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/numberLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/functionLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clearButton"
                    style="@android:style/Widget.Holo.Button"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="26dp"
                    android:text="@string/clear"
                    android:textSize="26sp" />

                <Button
                    android:id="@+id/power2"
                    style="@android:style/Widget.Holo.Button"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="13dp"
                    android:text="@string/x2"
                    android:textSize="26sp" />
                <Button
                    android:id="@+id/power3"
                    style="@android:style/Widget.Holo.Button"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="13dp"
                    android:text="@string/x3"
                    android:textSize="26sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/keyboardLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        android:gravity="center"
                        android:textSize="26sp">

                        <Button
                            android:id="@+id/button7"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="40dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/_7"
                            android:textSize="26sp" />

                        <Button
                            android:id="@+id/button8"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="40dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:text="@string/_8"
                            android:textSize="26sp" />

                        <Button
                            android:id="@+id/button9"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:text="@string/_9"
                            android:textSize="26sp" />

                        <Button
                            android:id="@+id/add"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:fontFamily="monospace"
                            android:text="@string/add"
                            android:textSize="26sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="4dp"
                        android:gravity="center">

                        <Button
                            android:id="@+id/button4"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:text="@string/_4"
                            android:textSize="26sp" />

                        <Button
                            android:id="@+id/button5"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:text="@string/_5"
                            android:textSize="26sp" />

                        <Button
                            android:id="@+id/button6"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:text="@string/_6"
                            android:textSize="26sp" />

                        <Button
                            android:id="@+id/minus"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:fontFamily="monospace"
                            android:text="@string/minus"
                            android:textSize="26sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow3"
                        android:layout_marginVertical="4dp"
                        android:gravity="center">

                        <Button
                            android:id="@+id/button1"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:text="@string/_1"
                            android:textSize="26sp" />

                        <Button
                            android:id="@+id/button2"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:text="@string/_2"
                            android:textSize="26sp" />

                        <Button
                            android:id="@+id/button3"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:text="@string/_3"
                            android:textSize="26sp" />

                        <Button
                            android:id="@+id/multi"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:fontFamily="monospace"
                            android:text="@string/plus"
                            android:textSize="26sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow4"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginVertical="4dp"
                        android:gravity="center">

                        <Button
                            android:id="@+id/button0"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:paddingHorizontal="10dp"
                            android:text="@string/_0"
                            android:textSize="26sp" />

                        <Button
                            android:id="@+id/decimal"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:text="@string/decimal"
                            android:textSize="26sp" />

                        <Button
                            android:id="@+id/equal"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:text="@string/equal"
                            android:textSize="26sp" />

                        <Button
                            android:id="@+id/divide"
                            style="@android:style/Widget.Holo.Button"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:layout_margin="6dp"
                            android:fontFamily="monospace"
                            android:text="@string/divide"
                            android:textSize="26sp" />
                    </TableRow>

                </TableLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>